--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "spatie/image": "^1.7",
         "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-permission": "^2.36",
+        "staudenmeir/belongs-to-through": "^2.5",
         "staudenmeir/eloquent-has-many-deep": "^1.8",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
