--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "anlutro/l4-settings": "^0.9.0",
         "browner12/helpers": "^2.1",
+        "datakrama/eloquid": "^0.1.1",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
